momentuHMM 1.1.2 2017-11-11
-----------------
Changes

* bug fix when nbStates=1 and circularAngleMean=TRUE

* bug fix when nbStates=1 and retryFits>0


momentuHMM 1.1.1 2017-09-19
-----------------
NEW FEATURES

* Normal (Gaussian) and Bernoulli distributions can now be specified for data streams

* Harbour seal example of McClintock et al (2013) added to vignette

Changes

* added pseudoRes continuity adjustment for discrete distributions


momentuHMM 1.1.0 2017-08-15
-----------------
NEW FEATURES

* fixPar argument in fitHMM and MIfitHMM now specified on the same scale as the initial parameters (Par0, beta0, and delta0 arguments)

* Factor-level covariates (e.g. 'sexM', `sexF') can now be included in pseudo design matrix DM arguments of fitHMM, MIfitHMM, and simData

* obsPerAnimal argument in simData can now be specified as a list indicating the number of observations for each individual

CHANGES

* vignette now built using knitr

* bug fix in crawlWrap when predTimes argument includes times that are before the time of first observation

* bug fix in plot.miSum calculation of natural scale parameters when cons and/or workcons MIfitHMM arguments are used


momentuHMM 1.0.1 2017-07-17
-----------------
NEW FEATURES

* Elephant seal example of Michelot et al (2017) added to vignette

CHANGES

* turning angles for lat/long coordinates (type='LL') now calculated based on initial bearings using geosphere::bearing in turnAngle

* bug fix when calculating activity center distances from lat/long coordinates (type='LL') in distAngle

* bug fix in prepData when successive pairs of coordinates are NA


momentuHMM 1.0.0 2017-06-16
-----------------
Initial CRAN posting